k8s/login-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: login-service
spec:
  type: NodePort
  selector:
    app: login-service
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
